implemented some detail features and tests

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -3,3 +3,10 @@
     padding: 1rem;
     margin: 0 auto;
 }
+
+
+.buttons-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
