--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -1,20 +1,36 @@
-fieldset{
-    padding:.5rem 0;
+fieldset {
+    padding: .5rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-label{
+label {
     display: block;
+    margin-bottom: .25rem;
+    font-size: var(--labels-size)
 }
 
-form{
+form {
     margin-top: 2rem;
     min-width: 300px;
 }
 
-button{
+input[type=text],
+input[type=email] {
+    width: calc(100% - 2rem);
+    padding: .5rem 1rem;
+
+}
+
+button {
+    font-size: clamp( calc(var(--buttons-font-size) - .5rem), 5vw,  calc(var(--buttons-font-size) + .25rem) );
     padding: .75rem 1rem;
     border-radius: 1rem;
     border: none;
     margin: .5rem;
     cursor: pointer;
+    margin: .5rem auto;
+    text-align: center;
+
 }
