--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,3 +1,8 @@
 :root {
     --color-transition: all .3s ease;
+    --titles-font-size: 1.5rem;
+    --buttons-font-size: 1rem;
+    --labels-size: 1rem;
+    --base-color: #333333;
+    --background-color: #f4f4f4c0;
 }
