--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,6 +3,6 @@
     --titles-font-size: 1.5rem;
     --buttons-font-size: 1rem;
     --labels-size: 1rem;
-    --base-color: #333333;
-    --background-color: #f4f4f4c0;
+    --base-color: #209a67;
+    --background-color: #f8f8f8;
 }
