--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,5 +1,5 @@
 .slot{
-    max-width: 600px;
+    max-width: 768px;
     padding: 1rem;
     margin: 0 auto;
 }
@@ -9,4 +9,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+hr{
+    height: 1px;
+    background-color: var(--base-color);
+    border: none;
 }
